--- a/styles.css
+++ b/styles.css
@@ -173,3 +173,98 @@ header ul li a:hover{
    transform:translateZ(10px);
     
 }
+
+
+@media (max-width: 991px)
+{
+    header
+    {
+        padding: 40px;
+    }
+    section
+    {
+        padding: 150px 40px;
+    }
+    .sci{
+        position: absolute;
+        left: 90%;
+        bottom: 20px;
+        transform: translateX(-50%);
+        display: flex;
+    }
+    .thumb li img{
+        max-width: 100%;
+    }
+    .content .textBox h2 span{
+        max-width: 100%;
+        font-size: 90px;
+    }
+     
+    .content .imgBox img{
+        max-width: 100%;
+        margin-right: -10px;
+        flex-direction: row;
+    }
+    .content
+    {
+        flex-direction: column;
+    }
+    .content .textBox
+    {
+        max-width: 100%;
+    }
+    .content .imgBox
+    {
+        max-width: 100%;
+        display: flex;
+        padding-right: 50px;
+        margin-top: 50px;
+        justify-content: flex-end;
+        flex-direction: row;
+    }
+    header .navigation
+    {
+        display: none;
+    }
+    header .navigation.active
+    {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #0062be;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        z-index: 10;
+    }
+    header .navigation li a
+    {
+        margin: 10px 0;
+        font-size: 1.5em;
+        font-weight: 300;
+    }
+    .toggle
+    {
+        position: relative;
+        width: 30px;
+        height: 30px;
+        background: url(images/menu.png);
+        background-size: 30px;
+        background-repeat: no-repeat;
+        background-position: center;
+        cursor: pointer;
+        z-index: 10000;
+    }
+    .toggle.active
+    {
+        position: fixed;
+        right: 40px;
+        background: url(images/close.png);
+        background-size: 25px;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+}
