--- a/styles.css
+++ b/styles.css
@@ -195,10 +195,20 @@ header ul li a:hover{
     .thumb li img{
         max-width: 100%;
     }
+    
+
     .content .textBox h2 span{
         max-width: 100%;
-        font-size: 90px;
+        font-size: 80px;
     }
+
+    .content .textBox h2{
+        margin-left: -10px;
+        max-width: 100%;
+        font-size: 60px;
+    }
+
+
      
     .content .imgBox img{
         max-width: 100%;
