--- a/styles.css
+++ b/styles.css
@@ -193,7 +193,7 @@ header ul li a:hover{
         display: flex;
     }
     .thumb li img{
-        max-width: 100%;
+        max-width: 80px;
     }
     
 
